--- a/shaping-link.htm
+++ b/shaping-link.htm
@@ -1,7 +1,7 @@
 <html>
 <body>
 <script src="dist/vivus.js"></script>
-<object type="image/svg+xml" data="shaping-toanim-plain.svg" class="" id="svg2">
+<object type="image/svg+xml" data="shaping-toanim-plain.svg" class="" id="svg2" style="width:100%;height:100%;">
 </object>
 
 <script>
